--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,6 @@ h6 {
   color: #fff;
 }
 
-/* Sections Header
---------------------------------*/
 
 .section-header {
   margin-bottom: 60px;
@@ -448,7 +446,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 100vh;
-  background-color: #f82249;
+  background-color: red;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -498,7 +496,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #intro h1 span {
-  /*color: #22BBF8;*/
   background: linear-gradient(to right, #9A3D72 0%, #2FA9AB 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -635,9 +632,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 }
 
-/*--------------------------------------------------------------
-# About Section
---------------------------------------------------------------*/
 
 #about {
   background: url("../img/about-bg.jpg");
@@ -679,21 +673,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #fff;
 }
 
-/*--------------------------------------------------------------
-# Speakers Section
---------------------------------------------------------------*/
 
-#speakers {
-  padding: 60px 0 30px 0;
-}
-
-#speakers .speaker {
-  position: relative;
-  overflow: hidden;
-  margin-bottom: 30px;
-}
-
-#speakers .speaker .details {
+ .details {
   background: rgba(6, 12, 34, 0.76);
   position: absolute;
   left: 0;
@@ -704,52 +685,49 @@ body.mobile-nav-active #mobile-nav-toggle {
   transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-#speakers .speaker .details h3 {
+  .details h3 {
   color: #fff;
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
 }
 
-#speakers .speaker .details p {
+  .details p {
   color: #fff;
   font-size: 15px;
   margin-bottom: 10px;
   font-style: italic;
 }
 
-#speakers .speaker .details .social {
+.details .social {
   height: 30px;
 }
 
-#speakers .speaker .details a {
+ .details a {
   color: #fff;
 }
 
-#speakers .speaker .details a:hover {
+  .details a:hover {
   color: #f82249;
 }
 
-#speakers .speaker:hover .details {
+ .details {
   bottom: 0;
 }
 
-#speakers-details {
-  padding: 60px 0;
-}
 
-#speakers-details .details h2 {
+ .details h2 {
   color: #112363;
   font-size: 28px;
   font-weight: 700;
   margin-bottom: 10px;
 }
 
-#speakers-details .details .social {
+ .details .social {
   margin-bottom: 15px;
 }
 
-#speakers-details .details .social a {
+.details .social a {
   background: #e9edfb;
   color: #112363;
   line-height: 1;
@@ -761,24 +739,21 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding-top: 9px;
 }
 
-#speakers-details .details .social a:hover {
+ .details .social a:hover {
   background: #f82249;
   color: #fff;
 }
 
-#speakers-details .details .social a i {
+ .details .social a i {
   font-size: 18px;
 }
 
-#speakers-details .details p {
+.details p {
   color: #112363;
   font-size: 15px;
   margin-bottom: 10px;
 }
 
-/*--------------------------------------------------------------
-# Schedule Section
---------------------------------------------------------------*/
 
 #schedule {
   padding: 60px 0 60px 0;
@@ -838,7 +813,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   display: inline-block;
 }
 
-#schedule .schedule-item .speaker {
+#schedule .schedule-item  {
   width: 60px;
   height: 60px;
   overflow: hidden;
@@ -847,7 +822,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin: 0 10px 10px 0;
 }
 
-#schedule .schedule-item .speaker img {
+#schedule .schedule-item  img {
   height: 100%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
@@ -888,9 +863,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin: 0 10px 10px 0;
 }
 
-/*--------------------------------------------------------------
-# Venue Section
---------------------------------------------------------------*/
 
 #venue {
   padding: 60px 0;
@@ -954,59 +926,42 @@ body.mobile-nav-active #mobile-nav-toggle {
   transform: scale(1.1);
 }
 
-/*--------------------------------------------------------------
-# Hotels Section
---------------------------------------------------------------*/
 
-#hotels {
-  padding: 60px 0;
-}
-
-#hotels .hotel {
-  border: 1px solid #e0e5fa;
-  background: #fff;
-  margin-bottom: 30px;
-}
-
-#hotels .hotel:hover .hotel-img img {
+img {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 
-#hotels .hotel-img {
-  overflow: hidden;
-  margin-bottom: 15px;
-}
 
-#hotels .hotel-img img {
+img {
   transition: 0.3s ease-in-out;
 }
 
-#hotels h3 {
+h3 {
   font-weight: 600;
   font-size: 20px;
   margin-bottom: 5px;
   padding: 0 20px;
 }
 
-#hotels a {
+a {
   color: #152b79;
 }
 
-#hotels a:hover {
+a:hover {
   color: #f82249;
 }
 
-#hotels .stars {
+.stars {
   padding: 0 20px;
   margin-bottom: 5px;
 }
 
-#hotels .stars i {
+.stars i {
   color: #ffc31d;
 }
 
-#hotels p {
+p {
   padding: 0 20px;
   margin-bottom: 20px;
   color: #060c22;
@@ -1014,55 +969,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 15px;
 }
 
-/*--------------------------------------------------------------
-# Gallery Section
---------------------------------------------------------------*/
-
-#gallery {
-  padding: 60px;
-  overflow: hidden;
-}
-
-#gallery .owl-nav,
-#gallery .owl-dots {
-  margin-top: 25px;
-  text-align: center;
-}
-
-#gallery .owl-item {
-  border-left: 2px solid #fff;
-  border-right: 2px solid #fff;
-}
-
-#gallery .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd;
-}
-
-#gallery .owl-dot.active {
-  background-color: #f82249;
-}
-
-#gallery .gallery-carousel .owl-stage-outer {
-  overflow: visible;
-}
-
-#gallery .gallery-carousel .center {
-  border: 6px solid #f82249;
-  margin: -10px;
-  box-sizing: content-box;
-  padding: 4px;
-  background: #fff;
-  z-index: 1;
-}
-
-/*--------------------------------------------------------------
-# supporters Section
---------------------------------------------------------------*/
 
 #supporters {
   padding: 60px 0;
@@ -1101,9 +1007,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   transition: all 0.4s ease-in-out;
 }
 
-/*--------------------------------------------------------------
-# F.A.Q Section
---------------------------------------------------------------*/
 
 #faq {
   padding: 60px 0;
@@ -1151,164 +1054,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 #faq #faq-list a.collapsed i::before {
   content: "\f055" !important;
 }
-
-/*--------------------------------------------------------------
-# Subscribe Section
---------------------------------------------------------------*/
-
-#subscribe {
-  padding: 60px;
-  background: url(../img/subscribe-bg.jpg) center center no-repeat;
-  background-size: cover;
-  overflow: hidden;
-  position: relative;
-}
-
-#subscribe:before {
-  content: "";
-  background: rgba(6, 12, 34, 0.6);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-
-#subscribe .section-header h2,
-#subscribe p {
-  color: #fff;
-}
-
-#subscribe input {
-  background: #fff;
-  color: #060c22;
-  border: 0;
-  outline: none;
-  margin: 0;
-  padding: 9px 20px;
-  border-radius: 50px;
-  font-size: 14px;
-}
-
-#subscribe button {
-  border: 0;
-  padding: 9px 25px;
-  cursor: pointer;
-  background: #f82249;
-  color: #fff;
-  transition: all 0.3s ease;
-  outline: none;
-  font-size: 14px;
-  border-radius: 50px;
-}
-
-#subscribe button:hover {
-  background: #e0072f;
-}
-
-/*--------------------------------------------------------------
-# Buy Tickets Section
---------------------------------------------------------------*/
-
-#buy-tickets {
-  padding: 60px 0;
-  text-align: center;
-}
-
-#buy-tickets .card {
-  border: none;
-  border-radius: 5px;
-  transition: all  0.3s ease-in-out;
-  box-shadow: 0 10px 25px 0 rgba(6, 12, 34, 0.1);
-}
-
-#buy-tickets .card:hover {
-  box-shadow: 0 10px 35px 0 rgba(6, 12, 34, 0.2);
-}
-
-#buy-tickets .card hr {
-  margin: 25px 0;
-}
-
-#buy-tickets .card .card-title {
-  margin: 10px 0;
-  font-size: 14px;
-  letter-spacing: 1px;
-  font-weight: bold;
-}
-
-#buy-tickets .card .card-price {
-  font-size: 48px;
-  margin: 0;
-}
-
-#buy-tickets .card ul li {
-  margin-bottom: 20px;
-}
-
-#buy-tickets .card .text-muted {
-  opacity: 0.7;
-}
-
-#buy-tickets .card .btn {
-  font-size: 15px;
-  border-radius: 50px;
-  padding: 10px 40px;
-  transition: all 0.2s;
-  background-color: #f82249;
-  border: 0;
-  color: #fff;
-}
-
-#buy-tickets .card .btn:hover {
-  background-color: #e0072f;
-}
-
-#buy-tickets #buy-ticket-modal input,
-#buy-tickets #buy-ticket-modal select {
-  border-radius: 0;
-}
-
-#buy-tickets #buy-ticket-modal .btn {
-  font-size: 15px;
-  border-radius: 50px;
-  padding: 10px 40px;
-  transition: all 0.2s;
-  background-color: #f82249;
-  border: 0;
-  color: #fff;
-}
-
-#buy-tickets #buy-ticket-modal .btn:hover {
-  background-color: #e0072f;
-}
-
-/* #buy-tickets a {
-  font-size: 15px;
-  color: #fff;
-  background: #3770ff;
-  padding: 10px 40px;
-  border-radius: 50px;
-  border: 2px solid #3770ff;
-  transition: all ease-in-out 0.3s;
-  font-weight: 500;
-  line-height: 1;
-  font-size: 13px;
-}
-
-#buy-tickets a:hover {
-  background: none;
-  color: #3770ff;
-}
-/*
-.nav-menu li.buy-tickets:hover a:before,
-.nav-menu li.buy-tickets.menu-active a:before {
-  visibility: hidden;
-} */
-
-/*--------------------------------------------------------------
-# Contact Section
---------------------------------------------------------------*/
 
 #contact {
   padding: 60px 0;
@@ -1455,9 +1200,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   white-space: nowrap;
 }
 
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
 
 #footer {
   background: #101522;
