--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 100vh;
-  background-color: red;
+  background-color: #1261A0;
   background-size: cover;
   overflow: hidden;
   position: relative;
